适应企业版新版本的代码

--- a/MoDao2MiniGUI/MoDao2MiniGUI.csproj
+++ b/MoDao2MiniGUI/MoDao2MiniGUI.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WidgetEx.cs" />
+    <Compile Include="TextObj.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
